# pre-commit-hooks

./: .pre-commit-hooks.yaml  content-manager+precommit.code-workspace  setup.cfg
authors/: main.py
pre_commit_hooks/: utils.py
pre_commit_hooks/articles/: author.py  cover.py  date.py  images.py  language.py  latex.py  length.py  meta.py  slug.py  target.py  title.py  topics.py  utils.py  validate.py
pre_commit_hooks/team/: description.py  linkedin.py  mail.py  name.py  propic.py  team.py  utils.py  validate.py
