[metadata]
name = pre_commit_hooks
version = 1.1.0
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stAItuned/pre-commit-hooks
author = stAItuned
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    python-frontmatter
    imageio
    identify
    requests
    rich
    python-slugify
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    team-author-name = pre_commit_hooks.team.name:main
    team-team-names = pre_commit_hooks.team.team:main
    team-linkedin-url = pre_commit_hooks.team.linkedin:main
    team-mail-validate = pre_commit_hooks.team.mail:main
    team-description-length = pre_commit_hooks.team.description:main
    team-card-validate = pre_commit_hooks.team.validate:main
    team-card-propic = pre_commit_hooks.team.propic:main
    article-author = pre_commit_hooks.articles.author:main
    article-cover = pre_commit_hooks.articles.cover:main
    article-language = pre_commit_hooks.articles.language:main
    article-meta = pre_commit_hooks.articles.meta:main
    article-target = pre_commit_hooks.articles.target:main
    article-title = pre_commit_hooks.articles.title:main
    article-topics = pre_commit_hooks.articles.topics:main
    article-validate = pre_commit_hooks.articles.validate:main
    article-date = pre_commit_hooks.articles.date:main
    article-length = pre_commit_hooks.articles.length:main
    article-images = pre_commit_hooks.articles.images:main
    article-equations = pre_commit_hooks.articles.latex:main
    article-slug = pre_commit_hooks.articles.slug:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
